--- a/demo/helm-release-nginx.yaml
+++ b/demo/helm-release-nginx.yaml
@@ -17,5 +17,5 @@ spec:
       enabled: false
       path: /*
       annotations:
-        kubernetes.io/ingress.class: alb
+        kubernetes.io/ingress.class: nginx
         alb.ingress.kubernetes.io/scheme: internet-facing
